--- a/register.html
+++ b/register.html
@@ -18,10 +18,10 @@
     <nav>
         <ul class="container">
             <li><a href="index.html">Home</a></li>
-            <li><a href="Registration.html">Register</a></li>
+            <li><a href="register.html">Register</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="login.html">Login</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
         </ul>
     </nav><br><br>
